fix(all) mobile

--- a/src/components/score/style.scss
+++ b/src/components/score/style.scss
@@ -6,12 +6,13 @@
     
 }
 .titleScore{
-  z-index: 100;
-    width: 50px;
-    top: 24px;
-    left: 30px;
-    font-size:15px;
-    font-weight: 500;
+    z-index: 100;
+    width: 147px;
+     font-size: 15px;
+     color: black;
+     position: absolute;
+    margin-top:15px;
+    
 }
 
 .containerTxtScore{
