--- a/src/pages/profil/style.scss
+++ b/src/pages/profil/style.scss
@@ -1,9 +1,8 @@
 @import "../../styles/commun.scss";
 
 .containerProfil {
-  position: absolute;
-  margin-left: 225px;
-  top: 159px;
+  margin-left: 109px;
+  padding-top: 3.5%;
 }
 
 .titleProfil {
@@ -15,8 +14,8 @@
   color: red;
 }
 .txtProfil{
-    margin-top:41px;
-    margin-bottom:77px;
+    margin-top:2.8%;
+    margin-bottom:6%;
 }
 .containerGraphUser{
   display:flex;
