--- a/src/layout/NavBarLeft/style.scss
+++ b/src/layout/NavBarLeft/style.scss
@@ -1,27 +1,21 @@
 @import "../../styles/commun.scss";
 .containerNavBarLeft{
-  outline: 2px solid yellow; 
-  position: absolute;
+
     height:100%;
     width:117px;
-
   color: white;
   background-color: black;
- 
-  display:flex;
+   display:flex;
   flex-direction: column;
- justify-content:space-between;
+ justify-content:space-around;
  align-items: center;
-
 }
 .textNavBarLeft{
-outline: 2px solid yellow; 
 color: white;
 writing-mode: vertical-lr;
 text-orientation: use-glyph-orientation;
 transform: rotate(180deg);
 display: inline-block;
-//height: 160px;
 width: 24px;
 font-weight: 500;
 font-size: 12px;
