--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -14,3 +14,11 @@ font-size: 12px;
    margin-top:15px;
    margin-left:34px;
 }
+
+@media #{$large-down} {
+   .containerTitleGraphAverageSession{
+      font-size: 12px;
+      margin-left:15px;
+   }
+ }
+ 
