--- a/src/components/Intensity/style.scss
+++ b/src/components/Intensity/style.scss
@@ -1,5 +1,7 @@
+@import "../../styles/commun.scss";
 .intensity{
     text-align: center;
     background-color:#282D30;
     border-radius: 5px;
+
 }
