--- a/src/components/score/style.scss
+++ b/src/components/score/style.scss
@@ -1,10 +1,12 @@
 @import "../../styles/commun.scss";
-.score{
+.containerScore{
     text-align: center;
     background-color: #FBFBFB;
     border-radius: 5px;
     
 }
+
+
 .titleScore{
     z-index: 100;
     width: 147px;
@@ -15,25 +17,47 @@
     margin-left: -25px;
 }
 
-.containerTxtScore{
-    position: absolute;  
-    width: 100px;  
-margin-top:-120px;
-margin-left:60px;
-   }
+.containerTextScore{
+     font-weight: 700;
+   position: relative;
+   z-index: 100;
+   top: -70px;
+left: 10px;
+      }
    .pourcentScore{
-       position: absolute;
-       margin-top:-148px;
-       margin-left:15px;
-   }
-.txtObjectif{
+     font-size:26px;
     font-weight: 700;
-}
+    position: relative;
+    top: -68px;
+    left: 20px;
+   }
+
 .graphScore{
     font-size:26px;
     font-weight: 700;}
 
-.pourcentScore{
-    font-size:26px;
-    font-weight: 700;
-}
+    .containerTextitle{
+        position: relative;
+        margin-top:-70px;
+        margin-left: 12px;
+    }
+
+    @media #{$large-down} {
+        .pourcentScore{
+                       top: -55px;
+          
+          }
+        .containerTextitle{
+            position: relative;
+            margin-top:-58px;
+            margin-left: 12px;
+        }
+        .titleScore{
+           
+             font-size: 12px;
+          
+            margin-top:12px;
+            margin-left: -50px;
+        }
+        
+      }
