--- a/src/layout/NavBarLeft/style.scss
+++ b/src/layout/NavBarLeft/style.scss
@@ -2,6 +2,7 @@
 .containerNavBarLeft{
     height:100%;
     min-width:117px;
+    min-height: 100vh;
   color: white;
   background-color: black;
    display:flex;
