fix(css) average-navbar-profil

--- a/src/components/AverageSession/style.scss
+++ b/src/components/AverageSession/style.scss
@@ -11,7 +11,7 @@ font-size: 12px;
     font-size: 15px;
     color: #FFFFFF;
     position: absolute;
-   margin-top:15px;
+   margin-top:1vh;
    margin-left:34px;
 }
 
